Fixed carousel columb overlap

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -65,7 +65,7 @@ footer {
 	background: linear-gradient(to bottom, #983434 0%, #D4B04C 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#983434', endColorstr='#D4B790',
 	GradientType=0);
-	padding-top: 20px;
+	padding-top: 10px;
 	padding-bottom: 5px;
 }
 
